--- a/src/index.html
+++ b/src/index.html
@@ -10,30 +10,10 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="listing.js"></script>
-  <div class="ui big relaxed list">
-    <div class="item">
-      <img class="ui avatar image" src="https://cdnimg.melon.co.kr/cm/album/images/103/09/213/10309213_500.jpg">
-      <div class="content">
-        <div class="header">1. 그대라는 시</div>
-        태연 (TAEYEON) [호텔 델루나 OST Part.3]
-      </div>
-    </div>
-    <div class="item">
-      <img class="ui avatar image" src="https://cdnimg.melon.co.kr/cm/album/images/103/02/879/10302879_500.jpg">
-      <div class="content">
-        <div class="header">2. 헤어져줘서 고마워</div>
-        벤 [헤어져줘서 고마워]
-      </div>
-    </div>
-    <div class="item">
-      <img class="ui avatar image" src="https://cdnimg.melon.co.kr/cm/album/images/102/97/571/10297571_500.jpg">
-      <div class="content">
-        <div class="header">3. 술이 문제야</div>
-        장혜진 [술이 문제야]
-      </div>
-    </div>
+  <div class="frm">
+    <div class="ui big relaxed list"></div>
   </div>
+  <script type="text/javascript" src="listing.js"></script>
 </body>
 
 </html>
