--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="css/semantic.min.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="css/semantic.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="css/semantic.min.js"></script>
-</head>
-
-<body>
-  <div class="frm">
-    <div class="ui big relaxed list"></div>
-  </div>
-  <script type="text/javascript" src="listing.js"></script>
-</body>
-
+  <body>
+    <div class="frm ui container segment">
+      <div class="ui big relaxed list"></div>
+    </div>
+    <script type="text/javascript" src="listing.js"></script>
+  </body>
 </html>
